# steam-parse

./: .gitignore  Cargo.toml  README.md
src/: main.rs
vdf-parse/: Cargo.toml
vdf-parse/src/: lib.rs  universe_type.rs
vdf-parse/src/appinfo/: mod.rs
vdf-parse/src/appinfo/types/: mod.rs
vdf-parse/src/packageinfo/: mod.rs
vdf-parse/src/steam_header/: mod.rs  steam_header_parse.rs  steam_header_type.rs
