[package]
name = "steam-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vdf-parse = {path="vdf-parse"}
serde_json = {version = "1.0"}
clap = { version = "4.5.3", features = ["derive"] }

[features]
debug = ["vdf-parse/debug"]