[package]
name = "vdf-parse"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.0.0-alpha2", default-features = false, features = ["alloc"]}

[profile.release]
lto = "fat"
codegen-units = 1
debug = false
